CSS/login_container.css
#login-box h1{
		padding:4px 165px;
		color:black;
}


#login-box {
	border:2px solid grey;
	position: relative;
	margin:10% auto;
	height: 450px;
	width:450px;
  box-sizing: border-box;
  background: white;
  border-radius: 7px;
   }

#continue-button {
   	height: 55px;
   	border-radius: 8px;
   	margin-left:50px;
   	width: 355px;
    margin-top: 30px;
   	background:rgb(120,120,120);
   	color:white;
   	font-size: 25px;
    cursor: pointer;
   	border:none;
   	outline: none;
   	font-family: sans-serif;

   }
 
#login-button{
 	padding: 5px;
 	position:relative;
 	transform:translate(100%,0%);
 	margin-top: 10px;
 	font-size: 15px;
 	width: 90px;
 	height:40px;
 	color: white;
 	border:none;
 	outline: none;
 	background: rgba(0,0,0,.9);
 	cursor: pointer;
 	border-radius: 10px;

 }

#login-button:hover {
 	background: black;

 }

.input-box {
   
    margin:0 46px;
   	padding: 4px;
   	width:350px;
   	height:45px;
   	border: 1px solid #aaa;
   	font-family:sans-serif;
    background:none;
    color: black;
    font-size: 20px;

   }

#login-container {
   	width:100%;
   	height: 100%;
   	overflow: auto;
   	display: none;
   	background-color: rgb(0, 0, 0, 0.8);
   	position: fixed;  /* To fill the container to the whole screen */
   	top:0; /*  */
   
   }

#cross {
   	position: absolute;
   	right:4px;
   	top:5px;
   	border:none;
   	outline: none;
   	background: white; 
    cursor: pointer
   }

p {
  font-size: 25px;
  font-family:Arial;
  margin-left: 46px;
  margin-bottom: 10px;
  color: rgb(60,60,60);
}

